# Electromagnetic-field

./: CMakeLists.txt  README.txt  graph.py  graph2.py  result.txt  result_real.txt
include/: el_field.h
samples/: CMakeLists.txt  sample_el_field.cpp
test/: CMakeLists.txt  test_el_field.cpp
